--- a/fila_gmail/.env
+++ b/fila_gmail/.env
@@ -1,9 +1,9 @@
-ENV DB_PORT=3306 # PORTA DO BANCO (O BANCO USADO FOI O MYSQL)
-ENV DB_USER=meu_usuario
-ENV DB_HOST=ip_banco
-ENV DB_PASSWORD=senha_banco
-ENV DB_SCHEMA=schema_banco
-ENV MAIL_USER=usuario_email # A FILA DE EMAIL FOI DESENVOLVIDA COM GMAIL
-ENV MAIL_PASS=senha_email
-ENV MAIL_MESSAGE_FROM=mensagem
-ENV TABLENAME=nome_tabela_email
+DB_PORT=3306 # PORTA DO BANCO (O BANCO USADO FOI O MYSQL)
+DB_USER=meu_usuario
+DB_HOST=ip_banco
+DB_PASSWORD=senha_banco
+DB_SCHEMA=schema_banco
+MAIL_USER=usuario_email # A FILA DE EMAIL FOI DESENVOLVIDA COM GMAIL
+MAIL_PASS=senha_email
+MAIL_MESSAGE_FROM=mensagem
+TABLENAME=nome_tabela_email
